Add data wrangling logic and backup parquet file for combined long/lat data

--- a/data/data_wrangle backup.ipynb
+++ b/data/data_wrangle backup.ipynb
@@ -9648,7 +9648,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "to_convert = [cma_shape, csd_shape]\n",
+    "converted = [df.to_crs(epsg=4326) for df in to_convert]\n",
+    "province_sf, cma_sf, csd_sf = converted\n",
+    "\n",
+    "# Optimize data cleaning with chained operations\n",
+    "cma_longlat_clean = (cma_sf\n",
+    "    .rename(columns={'CMANAME': 'NAME'})\n",
+    "    .drop(columns=['DGUIDP', 'CMAUID', 'CMAPUID','CMATYPE','LANDAREA'])\n",
+    "    #.assign(CLASS=\"CMA_CA\")\n",
+    ")\n",
+    "\n",
+    "csd_longlat_clean = (csd_sf\n",
+    "    .rename(columns={'CSDNAME': 'NAME'})\n",
+    "    .drop(columns=['CSDUID','CSDTYPE','LANDAREA'])\n",
+    "    #.assign(CLASS=\"CSD\")\n",
+    ")\n",
+    "\n",
+    "combined_longlat = pd.concat([cma_longlat_clean, csd_longlat_clean], ignore_index=True)\n",
+    "combined_longlat_indexed = combined_longlat#.set_index('DGUID')\n",
+    "combined_longlat_clean = combined_longlat_indexed[combined_longlat_indexed['DGUID'].isin(dguids)]\n",
+    "combined_longlat_clean.to_parquet(\"combined_longlat_clean.parquet\")\n",
+    "combined_longlat_clean"
+   ]
   }
  ],
  "metadata": {
