Finished Pre-data wrangling

--- a/data/data_wrangle backup.ipynb
+++ b/data/data_wrangle backup.ipynb
@@ -9525,7 +9525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -9633,7 +9633,7 @@
        " nan]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9648,29 +9648,497 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DGUID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>PRUID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021S0503001</td>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>10</td>\n",
+       "      <td>MULTIPOLYGON (((8967216.191 2136402.131, 89672...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021S0504010</td>\n",
+       "      <td>Grand Falls-Windsor</td>\n",
+       "      <td>10</td>\n",
+       "      <td>POLYGON ((8715069.6 2159071.726, 8715064.097 2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021S0504011</td>\n",
+       "      <td>Gander</td>\n",
+       "      <td>10</td>\n",
+       "      <td>POLYGON ((8794489.877 2214683.869, 8795102.377...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021S0504015</td>\n",
+       "      <td>Corner Brook</td>\n",
+       "      <td>10</td>\n",
+       "      <td>POLYGON ((8595903.94 2105395.523, 8595917.629 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021S0504105</td>\n",
+       "      <td>Charlottetown</td>\n",
+       "      <td>11</td>\n",
+       "      <td>MULTIPOLYGON (((8374335.443 1629502.597, 83743...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5312</th>\n",
+       "      <td>2021A00056208068</td>\n",
+       "      <td>Umingmaktok</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((5544792.883 3549525.897, 55447...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5313</th>\n",
+       "      <td>2021A00056208073</td>\n",
+       "      <td>Cambridge Bay</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((5693598.966 3664907.42, 569358...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5314</th>\n",
+       "      <td>2021A00056208081</td>\n",
+       "      <td>Gjoa Haven</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((6043125.089 3568426.163, 60431...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5315</th>\n",
+       "      <td>2021A00056208087</td>\n",
+       "      <td>Taloyoak</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((6136803.711 3664909.323, 61367...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5316</th>\n",
+       "      <td>2021A00056208098</td>\n",
+       "      <td>Kitikmeot, Unorganized</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((5541699.5 3510034.311, 5541692...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5317 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DGUID                    NAME PRUID  \\\n",
+       "0         2021S0503001              St. John's    10   \n",
+       "1         2021S0504010     Grand Falls-Windsor    10   \n",
+       "2         2021S0504011                  Gander    10   \n",
+       "3         2021S0504015            Corner Brook    10   \n",
+       "4         2021S0504105           Charlottetown    11   \n",
+       "...                ...                     ...   ...   \n",
+       "5312  2021A00056208068             Umingmaktok    62   \n",
+       "5313  2021A00056208073           Cambridge Bay    62   \n",
+       "5314  2021A00056208081              Gjoa Haven    62   \n",
+       "5315  2021A00056208087                Taloyoak    62   \n",
+       "5316  2021A00056208098  Kitikmeot, Unorganized    62   \n",
+       "\n",
+       "                                               geometry  \n",
+       "0     MULTIPOLYGON (((8967216.191 2136402.131, 89672...  \n",
+       "1     POLYGON ((8715069.6 2159071.726, 8715064.097 2...  \n",
+       "2     POLYGON ((8794489.877 2214683.869, 8795102.377...  \n",
+       "3     POLYGON ((8595903.94 2105395.523, 8595917.629 ...  \n",
+       "4     MULTIPOLYGON (((8374335.443 1629502.597, 83743...  \n",
+       "...                                                 ...  \n",
+       "5312  MULTIPOLYGON (((5544792.883 3549525.897, 55447...  \n",
+       "5313  MULTIPOLYGON (((5693598.966 3664907.42, 569358...  \n",
+       "5314  MULTIPOLYGON (((6043125.089 3568426.163, 60431...  \n",
+       "5315  MULTIPOLYGON (((6136803.711 3664909.323, 61367...  \n",
+       "5316  MULTIPOLYGON (((5541699.5 3510034.311, 5541692...  \n",
+       "\n",
+       "[5317 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "to_convert = [cma_shape, csd_shape]\n",
-    "converted = [df.to_crs(epsg=4326) for df in to_convert]\n",
-    "province_sf, cma_sf, csd_sf = converted\n",
-    "\n",
     "# Optimize data cleaning with chained operations\n",
-    "cma_longlat_clean = (cma_sf\n",
+    "cma_longlat_clean = (cma_shape\n",
     "    .rename(columns={'CMANAME': 'NAME'})\n",
     "    .drop(columns=['DGUIDP', 'CMAUID', 'CMAPUID','CMATYPE','LANDAREA'])\n",
     "    #.assign(CLASS=\"CMA_CA\")\n",
     ")\n",
     "\n",
-    "csd_longlat_clean = (csd_sf\n",
+    "csd_longlat_clean = (csd_shape\n",
     "    .rename(columns={'CSDNAME': 'NAME'})\n",
     "    .drop(columns=['CSDUID','CSDTYPE','LANDAREA'])\n",
     "    #.assign(CLASS=\"CSD\")\n",
     ")\n",
     "\n",
-    "combined_longlat = pd.concat([cma_longlat_clean, csd_longlat_clean], ignore_index=True)\n",
-    "combined_longlat_indexed = combined_longlat#.set_index('DGUID')\n",
-    "combined_longlat_clean = combined_longlat_indexed[combined_longlat_indexed['DGUID'].isin(dguids)]\n",
-    "combined_longlat_clean.to_parquet(\"combined_longlat_clean.parquet\")\n",
-    "combined_longlat_clean"
+    "cma_csd_shape = pd.concat([cma_longlat_clean, csd_longlat_clean], ignore_index=True)\n",
+    "cma_csd_shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DGUID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>PRUID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021S0503001</td>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>10</td>\n",
+       "      <td>MULTIPOLYGON (((8967216.191 2136402.131, 89672...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021S0504105</td>\n",
+       "      <td>Charlottetown</td>\n",
+       "      <td>11</td>\n",
+       "      <td>MULTIPOLYGON (((8374335.443 1629502.597, 83743...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021S0503205</td>\n",
+       "      <td>Halifax</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((8488823.669 1504574.463, 84888...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2021S0504225</td>\n",
+       "      <td>Cape Breton</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((8604769.074 1699019.011, 86047...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2021S0503305</td>\n",
+       "      <td>Moncton</td>\n",
+       "      <td>13</td>\n",
+       "      <td>MULTIPOLYGON (((8284454.169 1526860.969, 82844...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2021A00054817027</td>\n",
+       "      <td>Big Lakes County</td>\n",
+       "      <td>48</td>\n",
+       "      <td>MULTIPOLYGON (((4767363.146 2394279.957, 47672...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4498</th>\n",
+       "      <td>2021A00055903058</td>\n",
+       "      <td>Central Kootenay J</td>\n",
+       "      <td>59</td>\n",
+       "      <td>MULTIPOLYGON (((4378894.766 1836889.071, 43787...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4827</th>\n",
+       "      <td>2021A00055933006</td>\n",
+       "      <td>Merritt</td>\n",
+       "      <td>59</td>\n",
+       "      <td>POLYGON ((4213371.663 2013979.397, 4214323.477...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5275</th>\n",
+       "      <td>2021A00056105001</td>\n",
+       "      <td>Fort Smith</td>\n",
+       "      <td>61</td>\n",
+       "      <td>POLYGON ((5116511.671 2817199.846, 5116614.286...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5287</th>\n",
+       "      <td>2021A00056204003</td>\n",
+       "      <td>Iqaluit</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((7293549.569 3238757.371, 72935...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DGUID                NAME PRUID  \\\n",
+       "0         2021S0503001          St. John's    10   \n",
+       "4         2021S0504105       Charlottetown    11   \n",
+       "6         2021S0503205             Halifax    12   \n",
+       "10        2021S0504225         Cape Breton    12   \n",
+       "11        2021S0503305             Moncton    13   \n",
+       "...                ...                 ...   ...   \n",
+       "4381  2021A00054817027    Big Lakes County    48   \n",
+       "4498  2021A00055903058  Central Kootenay J    59   \n",
+       "4827  2021A00055933006             Merritt    59   \n",
+       "5275  2021A00056105001          Fort Smith    61   \n",
+       "5287  2021A00056204003             Iqaluit    62   \n",
+       "\n",
+       "                                               geometry  \n",
+       "0     MULTIPOLYGON (((8967216.191 2136402.131, 89672...  \n",
+       "4     MULTIPOLYGON (((8374335.443 1629502.597, 83743...  \n",
+       "6     MULTIPOLYGON (((8488823.669 1504574.463, 84888...  \n",
+       "10    MULTIPOLYGON (((8604769.074 1699019.011, 86047...  \n",
+       "11    MULTIPOLYGON (((8284454.169 1526860.969, 82844...  \n",
+       "...                                                 ...  \n",
+       "4381  MULTIPOLYGON (((4767363.146 2394279.957, 47672...  \n",
+       "4498  MULTIPOLYGON (((4378894.766 1836889.071, 43787...  \n",
+       "4827  POLYGON ((4213371.663 2013979.397, 4214323.477...  \n",
+       "5275  POLYGON ((5116511.671 2817199.846, 5116614.286...  \n",
+       "5287  MULTIPOLYGON (((7293549.569 3238757.371, 72935...  \n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "#combined_longlat_indexed = combined_longlat#.set_index('DGUID')\n",
+    "cma_csd_shape_clean = cma_csd_shape[cma_csd_shape['DGUID'].isin(dguids)]\n",
+    "cma_csd_shape_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DGUID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>PRUID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021S0503001</td>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>10</td>\n",
+       "      <td>MULTIPOLYGON (((-52.97228 47.51126, -52.97243 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021S0504105</td>\n",
+       "      <td>Charlottetown</td>\n",
+       "      <td>11</td>\n",
+       "      <td>MULTIPOLYGON (((-62.97843 46.29946, -62.97855 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021S0503205</td>\n",
+       "      <td>Halifax</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((-62.38106 44.85663, -62.38118 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2021S0504225</td>\n",
+       "      <td>Cape Breton</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((-59.95531 45.90596, -59.95546 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2021S0503305</td>\n",
+       "      <td>Moncton</td>\n",
+       "      <td>13</td>\n",
+       "      <td>MULTIPOLYGON (((-64.57559 45.81621, -64.57574 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2021A00054817027</td>\n",
+       "      <td>Big Lakes County</td>\n",
+       "      <td>48</td>\n",
+       "      <td>MULTIPOLYGON (((-115.42873 55.33032, -115.4281...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4498</th>\n",
+       "      <td>2021A00055903058</td>\n",
+       "      <td>Central Kootenay J</td>\n",
+       "      <td>59</td>\n",
+       "      <td>MULTIPOLYGON (((-117.63638 49.30468, -117.6370...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4827</th>\n",
+       "      <td>2021A00055933006</td>\n",
+       "      <td>Merritt</td>\n",
+       "      <td>59</td>\n",
+       "      <td>POLYGON ((-120.7549 50.13474, -120.74016 50.13...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5275</th>\n",
+       "      <td>2021A00056105001</td>\n",
+       "      <td>Fort Smith</td>\n",
+       "      <td>61</td>\n",
+       "      <td>POLYGON ((-112.24138 60.08207, -112.23937 60.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5287</th>\n",
+       "      <td>2021A00056204003</td>\n",
+       "      <td>Iqaluit</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((-68.52098 63.72182, -68.52116 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DGUID                NAME PRUID  \\\n",
+       "0         2021S0503001          St. John's    10   \n",
+       "4         2021S0504105       Charlottetown    11   \n",
+       "6         2021S0503205             Halifax    12   \n",
+       "10        2021S0504225         Cape Breton    12   \n",
+       "11        2021S0503305             Moncton    13   \n",
+       "...                ...                 ...   ...   \n",
+       "4381  2021A00054817027    Big Lakes County    48   \n",
+       "4498  2021A00055903058  Central Kootenay J    59   \n",
+       "4827  2021A00055933006             Merritt    59   \n",
+       "5275  2021A00056105001          Fort Smith    61   \n",
+       "5287  2021A00056204003             Iqaluit    62   \n",
+       "\n",
+       "                                               geometry  \n",
+       "0     MULTIPOLYGON (((-52.97228 47.51126, -52.97243 ...  \n",
+       "4     MULTIPOLYGON (((-62.97843 46.29946, -62.97855 ...  \n",
+       "6     MULTIPOLYGON (((-62.38106 44.85663, -62.38118 ...  \n",
+       "10    MULTIPOLYGON (((-59.95531 45.90596, -59.95546 ...  \n",
+       "11    MULTIPOLYGON (((-64.57559 45.81621, -64.57574 ...  \n",
+       "...                                                 ...  \n",
+       "4381  MULTIPOLYGON (((-115.42873 55.33032, -115.4281...  \n",
+       "4498  MULTIPOLYGON (((-117.63638 49.30468, -117.6370...  \n",
+       "4827  POLYGON ((-120.7549 50.13474, -120.74016 50.13...  \n",
+       "5275  POLYGON ((-112.24138 60.08207, -112.23937 60.0...  \n",
+       "5287  MULTIPOLYGON (((-68.52098 63.72182, -68.52116 ...  \n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cma_csd_sf = cma_csd_shape_clean.to_crs(epsg=4326)\n",
+    "cma_csd_sf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "cma_csd_sf.to_parquet(\"combined_longlat_clean.parquet\")"
    ]
   }
  ],
