Prepared clean_data

--- a/data/data_wrangle backup.ipynb
+++ b/data/data_wrangle backup.ipynb
@@ -4416,7 +4416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5672,21 +5672,15 @@
     "def clean_data(df):\n",
     "    # Drop columns: 'CIP6 Code', 'Province or Territory' and 4 other columns\n",
     "    df_clean = (df\n",
-    "          .drop(columns=['CIP6 Code', ' PR code', 'Enrollment Type', 'CMAname', 'CSDname'])\n",
-    "          .rename(columns={'Source Sheet': 'STEM/BHASE',\n",
-    "                           'PRdguid': 'PRDGUID',\n",
-    "                           'CMAuid': 'CMAPUID',\n",
-    "                           'CSDuid': 'CSDUID'})\n",
+    "          .drop(columns=['CIP6 Code', ' PR code', 'Enrollment Type', 'CMAname', 'CSDname', 'PRdguid', 'CMAuid', 'CSDuid'])\n",
+    "          .rename(columns={'Source Sheet': 'STEM/BHASE'})\n",
     "          .astype({'Province or Territory': 'category', \n",
     "                   'ISCED Level of Education': 'category', \n",
     "                   'Credential Type': 'category', \n",
     "                   'CIP Name': 'category', \n",
-    "                   'PRDGUID': 'category', \n",
     "                   'Academic Year': 'category', \n",
     "                   'STEM/BHASE': 'category', \n",
     "                   'Institution': 'category', \n",
-    "                   'CMAPUID': 'category', \n",
-    "                   'CSDUID': 'category', \n",
     "                   'DGUID': 'category'})\n",
     "    )\n",
     "    df_clean['GRAD/ENROLL'] = df_clean['STEM/BHASE'].str.replace(\"^[^_]+_[^_]+_([^_]+)_.*$\", lambda match: match.group(1), regex=True)\n",
