Got new data working.

--- a/data/data_wrangle backup.ipynb
+++ b/data/data_wrangle backup.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -13296,7 +13296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -14202,12 +14202,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "cma_csd_sf.to_parquet(\"combined_longlat_clean.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
+      "Index: 100 entries, 0 to 5287\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype   \n",
+      "---  ------    --------------  -----   \n",
+      " 0   DGUID     100 non-null    object  \n",
+      " 1   NAME      100 non-null    object  \n",
+      " 2   PRUID     100 non-null    object  \n",
+      " 3   geometry  100 non-null    geometry\n",
+      "dtypes: geometry(1), object(3)\n",
+      "memory usage: 3.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cma_csd_sf.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DGUID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>PRUID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021S0503001</td>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>10</td>\n",
+       "      <td>MULTIPOLYGON (((-52.97228 47.51126, -52.97243 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021S0504105</td>\n",
+       "      <td>Charlottetown</td>\n",
+       "      <td>11</td>\n",
+       "      <td>MULTIPOLYGON (((-62.97843 46.29946, -62.97855 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021S0503205</td>\n",
+       "      <td>Halifax</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((-62.38106 44.85663, -62.38118 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2021S0504225</td>\n",
+       "      <td>Cape Breton</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((-59.95531 45.90596, -59.95546 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2021S0503305</td>\n",
+       "      <td>Moncton</td>\n",
+       "      <td>13</td>\n",
+       "      <td>MULTIPOLYGON (((-64.57559 45.81621, -64.57574 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2021A00054817027</td>\n",
+       "      <td>Big Lakes County</td>\n",
+       "      <td>48</td>\n",
+       "      <td>MULTIPOLYGON (((-115.42873 55.33032, -115.4281...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4498</th>\n",
+       "      <td>2021A00055903058</td>\n",
+       "      <td>Central Kootenay J</td>\n",
+       "      <td>59</td>\n",
+       "      <td>MULTIPOLYGON (((-117.63638 49.30468, -117.6370...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4827</th>\n",
+       "      <td>2021A00055933006</td>\n",
+       "      <td>Merritt</td>\n",
+       "      <td>59</td>\n",
+       "      <td>POLYGON ((-120.7549 50.13474, -120.74016 50.13...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5275</th>\n",
+       "      <td>2021A00056105001</td>\n",
+       "      <td>Fort Smith</td>\n",
+       "      <td>61</td>\n",
+       "      <td>POLYGON ((-112.24138 60.08207, -112.23937 60.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5287</th>\n",
+       "      <td>2021A00056204003</td>\n",
+       "      <td>Iqaluit</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((-68.52098 63.72182, -68.52116 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DGUID                NAME PRUID  \\\n",
+       "0         2021S0503001          St. John's    10   \n",
+       "4         2021S0504105       Charlottetown    11   \n",
+       "6         2021S0503205             Halifax    12   \n",
+       "10        2021S0504225         Cape Breton    12   \n",
+       "11        2021S0503305             Moncton    13   \n",
+       "...                ...                 ...   ...   \n",
+       "4381  2021A00054817027    Big Lakes County    48   \n",
+       "4498  2021A00055903058  Central Kootenay J    59   \n",
+       "4827  2021A00055933006             Merritt    59   \n",
+       "5275  2021A00056105001          Fort Smith    61   \n",
+       "5287  2021A00056204003             Iqaluit    62   \n",
+       "\n",
+       "                                               geometry  \n",
+       "0     MULTIPOLYGON (((-52.97228 47.51126, -52.97243 ...  \n",
+       "4     MULTIPOLYGON (((-62.97843 46.29946, -62.97855 ...  \n",
+       "6     MULTIPOLYGON (((-62.38106 44.85663, -62.38118 ...  \n",
+       "10    MULTIPOLYGON (((-59.95531 45.90596, -59.95546 ...  \n",
+       "11    MULTIPOLYGON (((-64.57559 45.81621, -64.57574 ...  \n",
+       "...                                                 ...  \n",
+       "4381  MULTIPOLYGON (((-115.42873 55.33032, -115.4281...  \n",
+       "4498  MULTIPOLYGON (((-117.63638 49.30468, -117.6370...  \n",
+       "4827  POLYGON ((-120.7549 50.13474, -120.74016 50.13...  \n",
+       "5275  POLYGON ((-112.24138 60.08207, -112.23937 60.0...  \n",
+       "5287  MULTIPOLYGON (((-68.52098 63.72182, -68.52116 ...  \n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cma_csd_sf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simplified_sf = cma_csd_sf.copy()\n",
+    "simplified_sf['geometry'] = simplified_sf.geometry.simplify(tolerance=0.01, preserve_topology=True)\n",
+    "\n",
+    "# Function to round coordinates that works with both Polygon and MultiPolygon\n",
+    "def round_coords(geom, precision=5):\n",
+    "    import shapely.geometry as sg\n",
+    "    \n",
+    "    if geom is None:\n",
+    "        return None\n",
+    "    \n",
+    "    if isinstance(geom, sg.Polygon):\n",
+    "        # Handle Polygon\n",
+    "        exterior_coords = [(round(x, precision), round(y, precision)) \n",
+    "                           for x, y in geom.exterior.coords]\n",
+    "        \n",
+    "        interiors = []\n",
+    "        for interior in geom.interiors:\n",
+    "            interior_coords = [(round(x, precision), round(y, precision)) \n",
+    "                              for x, y in interior.coords]\n",
+    "            interiors.append(interior_coords)\n",
+    "            \n",
+    "        return sg.Polygon(exterior_coords, interiors)\n",
+    "        \n",
+    "    elif isinstance(geom, sg.MultiPolygon):\n",
+    "        # Handle MultiPolygon by applying the function to each polygon\n",
+    "        polygons = [round_coords(polygon, precision) for polygon in geom.geoms]\n",
+    "        return sg.MultiPolygon(polygons)\n",
+    "    \n",
+    "    # Return other geometry types unchanged\n",
+    "    return geom\n",
+    "\n",
+    "# Apply the coordinate rounding function\n",
+    "#simplified_sf['geometry'] = simplified_sf.geometry.apply(round_coords)\n",
+    "\n",
+    "# Save the simplified version\n",
+    "simplified_sf.to_parquet(\"combined_longlat_simplified.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DGUID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>PRUID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021S0503001</td>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>10</td>\n",
+       "      <td>MULTIPOLYGON (((-52.97228 47.51126, -52.97223 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021S0504105</td>\n",
+       "      <td>Charlottetown</td>\n",
+       "      <td>11</td>\n",
+       "      <td>MULTIPOLYGON (((-62.97843 46.29946, -62.97855 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021S0503205</td>\n",
+       "      <td>Halifax</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((-62.38106 44.85663, -62.38133 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2021S0504225</td>\n",
+       "      <td>Cape Breton</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MULTIPOLYGON (((-59.95531 45.90596, -59.95555 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2021S0503305</td>\n",
+       "      <td>Moncton</td>\n",
+       "      <td>13</td>\n",
+       "      <td>MULTIPOLYGON (((-64.57559 45.81621, -64.57574 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2021A00054817027</td>\n",
+       "      <td>Big Lakes County</td>\n",
+       "      <td>48</td>\n",
+       "      <td>MULTIPOLYGON (((-115.42873 55.33032, -115.4373...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4498</th>\n",
+       "      <td>2021A00055903058</td>\n",
+       "      <td>Central Kootenay J</td>\n",
+       "      <td>59</td>\n",
+       "      <td>MULTIPOLYGON (((-117.63638 49.30468, -117.6475...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4827</th>\n",
+       "      <td>2021A00055933006</td>\n",
+       "      <td>Merritt</td>\n",
+       "      <td>59</td>\n",
+       "      <td>POLYGON ((-120.7549 50.13474, -120.73354 50.13...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5275</th>\n",
+       "      <td>2021A00056105001</td>\n",
+       "      <td>Fort Smith</td>\n",
+       "      <td>61</td>\n",
+       "      <td>POLYGON ((-112.24138 60.08207, -112.1805 60.07...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5287</th>\n",
+       "      <td>2021A00056204003</td>\n",
+       "      <td>Iqaluit</td>\n",
+       "      <td>62</td>\n",
+       "      <td>MULTIPOLYGON (((-68.52098 63.72182, -68.52133 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DGUID                NAME PRUID  \\\n",
+       "0         2021S0503001          St. John's    10   \n",
+       "4         2021S0504105       Charlottetown    11   \n",
+       "6         2021S0503205             Halifax    12   \n",
+       "10        2021S0504225         Cape Breton    12   \n",
+       "11        2021S0503305             Moncton    13   \n",
+       "...                ...                 ...   ...   \n",
+       "4381  2021A00054817027    Big Lakes County    48   \n",
+       "4498  2021A00055903058  Central Kootenay J    59   \n",
+       "4827  2021A00055933006             Merritt    59   \n",
+       "5275  2021A00056105001          Fort Smith    61   \n",
+       "5287  2021A00056204003             Iqaluit    62   \n",
+       "\n",
+       "                                               geometry  \n",
+       "0     MULTIPOLYGON (((-52.97228 47.51126, -52.97223 ...  \n",
+       "4     MULTIPOLYGON (((-62.97843 46.29946, -62.97855 ...  \n",
+       "6     MULTIPOLYGON (((-62.38106 44.85663, -62.38133 ...  \n",
+       "10    MULTIPOLYGON (((-59.95531 45.90596, -59.95555 ...  \n",
+       "11    MULTIPOLYGON (((-64.57559 45.81621, -64.57574 ...  \n",
+       "...                                                 ...  \n",
+       "4381  MULTIPOLYGON (((-115.42873 55.33032, -115.4373...  \n",
+       "4498  MULTIPOLYGON (((-117.63638 49.30468, -117.6475...  \n",
+       "4827  POLYGON ((-120.7549 50.13474, -120.73354 50.13...  \n",
+       "5275  POLYGON ((-112.24138 60.08207, -112.1805 60.07...  \n",
+       "5287  MULTIPOLYGON (((-68.52098 63.72182, -68.52133 ...  \n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplified_sf"
    ]
   }
  ],
